--- a/atraso_nodal/project.html
+++ b/atraso_nodal/project.html
@@ -71,7 +71,7 @@
                             .load(animation);
                 }
             }
-            var clickTag = "http://www.animatron.com";
+            var clickTag = "https://www.animatron.com";
 
                 window.addEventListener("load", start);
         </script>
