--- a/tcc1.html
+++ b/tcc1.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1>SIMULAÇÕES:</h1>
-<a href = "./atraso_nodal/project.html">Atraso Nodal</a>
+<a href = "./atraso/index.html">Atraso Nodal</a>
 </body>
 
 </html>
