--- a/tcc1.html
+++ b/tcc1.html
@@ -8,6 +8,7 @@
 <body>
 <h1>SIMULAÇÕES:</h1>
 <a href = "./atraso/index.html">Atraso Nodal</a>
+<a href = "./tcp/pacote.html">Pacote TCP</a>
 </body>
 
 </html>
