Added some stuff

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css"/>
 	<title>Elbe Miranda Projects</title>
 </head>
 
 <body>
-<a href = "tcc1.html">Projeto de Aplicação 1</a>
-</body>
+	<H1>Elbe Miranda</H1>
+	<div class="projects">
+		<li>
+				<a href = "tcc1.html">Projeto de Aplicação 1</a>
+		</li>
+	</div>
+	</body>
 
 </html>
